update the countdown to 3 seconds

--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 VITE_BASE_PATH="/study/"
-VITE_FIREBASE_CONFIG='
-{
-  apiKey: "AIzaSyAm9QtUgx1lYPDeE0vKLN-lK17WfUGVkLo",
-  authDomain: "revisit-utah.firebaseapp.com",
-  projectId: "revisit-utah",
-  storageBucket: "revisit-utah.appspot.com",
-  messagingSenderId: "811568460432",
-  appId: "1:811568460432:web:995f6b4f1fc8042b5dde15"
-}
-'
+VITE_FIREBASE_CONFIG='{
+  apiKey: "AIzaSyDUDbRY3b-ir78ytzFU6WXudkC39_YUgfk",
+  authDomain: "a3-visual-game.firebaseapp.com",
+  projectId: "a3-visual-game",
+  storageBucket: "a3-visual-game.appspot.com",
+  messagingSenderId: "942596293405",
+  appId: "1:942596293405:web:af1a09d457c4da624197f4",
+  measurementId: "G-YQ6XZB9SRE"
+}'
+
 VITE_STORAGE_ENGINE="firebase" # "firebase" or "localStorage" or your own custom storage engine
 VITE_RECAPTCHAV3TOKEN="6LdjOd0lAAAAAASvFfDZFWgtbzFSS9Y3so8rHJth" # recaptcha SITE KEY
