--- a/public/html-input/config-html-input.json
+++ b/public/html-input/config-html-input.json
@@ -55,7 +55,7 @@
         "order": "fixed",
         "components": [
             "introduction",
-            "barChart"
+            "game"
         ]
     }
 }
